Platform/Jenkins/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-redirect-jenkins-sonar
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  backend:
    serviceName: jenkins
    servicePort: 50000
  rules:
  - host: retailplatform.cloud.activeviam.com
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 80
      - path: /sonar
        backend:
          serviceName: sonar-service
          servicePort: 80
  tls:
    - secretName: active-tls-cert
      hosts:
        - retailplatform.cloud.activeviam.com
